# CHIP8-Interpreter

./: .gitignore  CHIP8  CHIP8.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  oCHIP  opcodes.cpp
include/: opcodes.h
